Update start and end events
Rename GBL S1

--- a/events/2020-03-09-Season_One_Great_League.yaml
+++ b/events/2020-03-09-Season_One_Great_League.yaml
@@ -1,4 +1,4 @@
-Name: "GBL Preseason - Great League"
+Name: "GBL S1 - Great League"
 Type: "GO_BATTLE_LEAGUE"
 StartTime: "2020-03-09T13:00:00"
 EndTime: "2020-03-23T13:00:00"
