--- a/events/2020-02-18-Pokemon_Spotlight.yaml
+++ b/events/2020-02-18-Pokemon_Spotlight.yaml
@@ -4,7 +4,7 @@ StartTime: "2020-02-18T18:00:00"
 EndTime: "2020-02-18T19:00:00"
 Timezone: null
 Wild:
-  - "Not Announced Yet"
+  - "Increased Spawns"
 Research: []
 Eggs: {}
 Raids: {}
