--- a/events/2020-01-24-Lunar_New_Year_Celebration.yaml
+++ b/events/2020-01-24-Lunar_New_Year_Celebration.yaml
@@ -1,5 +1,5 @@
 Name: "Lunar New Year Celebration"
-Type: "GENERAL_EVENT"
+Type: "GENERAL_EVENTS"
 StartTime: "2020-01-24T13:00:00"
 EndTime: "2020-02-03T13:00:00"
 Timezone: "America/Los_Angeles"
