--- a/events/2020-02-02-Minccino_Limited_Reseach.yaml
+++ b/events/2020-02-02-Minccino_Limited_Reseach.yaml
@@ -1,5 +1,5 @@
 Name: "Minccino Limited Research"
-Type: "GENERAL_EVENT"
+Type: "GENERAL_EVENTS"
 StartTime: "2020-02-02T14:00:00"
 EndTime: "2020-02-02T17:00:00"
 Timezone: null
