--- a/events/2020-02-06-Mystery_Bonus.yaml
+++ b/events/2020-02-06-Mystery_Bonus.yaml
@@ -1,5 +1,5 @@
 Name: "Mystery Bonus"
-Type: "GENERAL_EVENT"
+Type: "MYSTERY_BONUS_HOUR"
 StartTime: "2020-02-06T18:00:00"
 EndTime: "2020-02-06T19:00:00"
 Timezone: null
