--- a/events/2020-02-07-Sinnoh_Celebration.yaml
+++ b/events/2020-02-07-Sinnoh_Celebration.yaml
@@ -1,5 +1,5 @@
 Name: "Sinnoh Celebration"
-Type: "GENERAL_EVENT"
+Type: "GENERAL_EVENTS"
 StartTime: "2020-02-07T08:00:00"
 EndTime: "2020-02-10T22:00:00"
 Timezone: null
