--- a/events/2020-02-14-Valentines_Day_Celebration.yaml
+++ b/events/2020-02-14-Valentines_Day_Celebration.yaml
@@ -1,5 +1,5 @@
 Name: "Valentine's Day Celebration"
-Type: "GENERAL_EVENT"
+Type: "GENERAL_EVENTS"
 StartTime: "2020-02-14T08:00:00"
 EndTime: "2020-02-17T22:00:00"
 Timezone: null
