--- a/events/2020-02-18-Pokemon_Spotlight.yaml
+++ b/events/2020-02-18-Pokemon_Spotlight.yaml
@@ -1,5 +1,5 @@
 Name: "Pokemon Spotlight"
-Type: "GENERAL_EVENT"
+Type: "POKEMON_SPOTLIGHT_HOUR"
 StartTime: "2020-02-18T18:00:00"
 EndTime: "2020-02-18T19:00:00"
 Timezone: null
