--- a/events/2020-02-21-Friendship_Weekend.yaml
+++ b/events/2020-02-21-Friendship_Weekend.yaml
@@ -1,5 +1,5 @@
 Name: "Friendship Weekend"
-Type: "GENERAL_EVENT"
+Type: "GENERAL_EVENTS"
 StartTime: "2020-02-21T08:00:00"
 EndTime: "2020-02-24T22:00:00"
 Timezone: null
