Add Mystery Bonus Hour event description

--- a/events/2020-02-21-Friendship_Weekend.yaml
+++ b/events/2020-02-21-Friendship_Weekend.yaml
@@ -9,7 +9,7 @@ Eggs: {}
 Raids: {}
 Bonus:
   - "Faster Friendship Levels"
-  - "2x Trade Candy"
+  - "x2 Trade Candy"
   - "1/2 Stardust Cost"
   - "Open 40 Gifts"
   - "Carry 20 Gifts"
