--- a/events/2020-02-25-Pokemon_Day_Celebration.yaml
+++ b/events/2020-02-25-Pokemon_Day_Celebration.yaml
@@ -21,5 +21,5 @@ Raids:
     - "Armored Mewtwo (Psystrike)"
 Bonus:
   - "Clone Pikachu [New] in Photo Bombs"
-  - "3x Catch Stardust"
+  - "x3 Catch Stardust"
   - "3hr Lures"
