--- a/events/2020-03-03-Pokemon_Spotlight.yaml
+++ b/events/2020-03-03-Pokemon_Spotlight.yaml
@@ -1,10 +1,10 @@
 Name: "Pokemon Spotlight"
 Type: "POKEMON_SPOTLIGHT_HOUR"
-StartTime: "2020-02-04T18:00:00"
-EndTime: "2020-02-04T19:00:00"
+StartTime: "2020-03-03T18:00:00"
+EndTime: "2020-03-03T19:00:00"
 Timezone: null
 Wild:
-  - "Onix [Shiny]"
+  - "Increased Spawns"
 Research: []
 Eggs: {}
 Raids: {}
