--- a/events/2020-03-05-Mystery_Bonus.yaml
+++ b/events/2020-03-05-Mystery_Bonus.yaml
@@ -1,11 +1,11 @@
 Name: "Mystery Bonus"
 Type: "MYSTERY_BONUS_HOUR"
-StartTime: "2020-02-06T18:00:00"
-EndTime: "2020-02-06T19:00:00"
+StartTime: "2020-03-05T18:00:00"
+EndTime: "2020-03-05T19:00:00"
 Timezone: null
 Wild: []
 Research: []
 Eggs: {}
 Raids: {}
 Bonus:
-  - "x2 Catch Stardust"
+  - "Mystery Bonus"
