--- a/events/2020-04-10-SOne_Master_League.yaml
+++ b/events/2020-04-10-SOne_Master_League.yaml
@@ -1,7 +1,7 @@
-Name: "GBL Preseason - Ultra League"
+Name: "GBL S1 - Master League"
 Type: "GO_BATTLE_LEAGUE"
-StartTime: "2020-02-10T13:00:00"
-EndTime: "2020-02-24T13:00:00"
+StartTime: "2020-04-10T13:00:00"
+EndTime: "2020-04-24T13:00:00"
 Timezone: "America/Los_Angeles"
 Wild: []
 Research: []
