--- a/events/2020-03-24-Raid_Weekend.yaml
+++ b/events/2020-03-24-Raid_Weekend.yaml
@@ -1,8 +1,8 @@
 Name: "Raid Weekend"
 Type: "RAID_DAY"
-StartTime: "2020-03-27T08:00:00"
-EndTime: "2020-03-30T22:00:00"
-Timezone: null
+StartTime: "2020-03-24T13:00:00"
+EndTime: "2020-03-31T13:00:00"
+Timezone: "America/Los_Angeles"
 Wild: []
 Research: []
 Eggs: {}
